# my-little-cpp-chess-adventures

./: CMakeLists.txt  LICENSE  README.md
better_cpp/: CMakeLists.txt
better_cpp/include/: text.h
better_cpp/src/: text.cpp
better_cpp/tests/: CMakeLists.txt  text_test.cpp
include/: bitboard.h  board.h  color.h  doc.h  file.h  move.h  movegen.h  piece.h  piece_type.h  position.h  rank.h  square.h
src/: bitboard.cpp  board.cpp  movegen.cpp  piece.cpp  position.cpp
tests/: CMakeLists.txt  board_test.cpp  move_test.cpp  movegen_test.cpp  piece_test.cpp  position_test.cpp  square_test.cpp
